maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:23: error: ')' expected but 'else' found.
	if (dansLeCadre(a+1,b){val m = getIndication(a+1,b)}else{val m = 9999}
                                                            ^